# MIndMate-BE

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  diesel.toml
migrations/2025-07-23-082609_create_users/: up.sql
migrations/2025-07-23-082751_create_moods/: up.sql
migrations/2025-07-23-082907_create_journals/: down.sql  up.sql
migrations/2025-07-23-083022_create_help_requests/: down.sql  up.sql
migrations/2025-07-23-083111_create_psychologist_request/: down.sql  up.sql
migrations/2025-07-28-034522_create_token_blacklist/: up.sql
migrations/2025-07-29-042839_create_token_blacklist/: down.sql  up.sql
migrations/2025-07-29-080903_add_updated_at_to_users/: up.sql
migrations/2025-07-30-020001_add_age_and_gender_to_users/: down.sql  up.sql
migrations/2025-08-08-082521_add_avatar_to_users/: up.sql
migrations/2025-08-12-075845_change_avatar_to_text/: down.sql
src/: lib.rs  main.rs  schema.rs
src/api/: auth_handler.rs  journal_handler.rs  mod.rs  mood_handler.rs  user_handler.rs
src/db/: journal_query.rs  mod.rs  mood_query.rs  pool.rs  token_blacklist_query.rs  user_query.rs
src/errors/: app_error.rs
src/middleware/: auth_middleware.rs
src/models/: auth.rs  google_auth.rs  journal.rs  mod.rs  mood.rs  user.rs
src/path/: auth_path.rs  journal_path.rs  mod.rs  mood_path.rs  user_path.rs
src/service/: auth_service.rs  google_auth_service.rs  journal_service.rs  mod.rs  mood_service.rs  user_service.rs
src/utils/: jwt.rs
tests/: integration_test.rs
