[package]
name = "mindmate-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
diesel = { version = "2.2", features = ["sqlite", "chrono", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
axum-extra = "0.3"
headers = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
base64 = "0.21"
rand = "0.8"
